[package]
name = "muck"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.8"
rand = "0.8.5"
rgb = "0.8.37"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
textplots = "0.8.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

